Update 'n3qrysls1-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:177f335613d75430ac50a810f086971042d5b6cc@sha256:2ba7a760487bb74aea16fcbada616cba9ef1b9cae0ffb441ee132ee5225f5ed3

--- a/components/n3qrysls1-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/n3qrysls1-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: n3qrysls1-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:177f335613d75430ac50a810f086971042d5b6cc@sha256:2ba7a760487bb74aea16fcbada616cba9ef1b9cae0ffb441ee132ee5225f5ed3
+          name: container-image
